--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
     "lukasbesch/bedrock-plugin-disabler": "^1.4",
     "wpackagist-plugin/performance-lab": "^3.5",
     "wpackagist-plugin/dominant-color-images": "^1.1",
-    "wpackagist-plugin/ninja-forms": "^3.9"
+    "wpackagist-plugin/ninja-forms": "^3.9",
+    "wpackagist-plugin/advanced-custom-fields": "^6.3"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
